# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors = ["rollbor <1525266@qq.com>"]
categories = ["database"]
description = "Rust client library for Apache IoTDB"
documentation = "https://docs.rs/iotdb-client"
edition = "2021"
keywords = ["iot", "iotdb", "iotdb-client", "apache-iotdb"]
license = "Apache-2.0"
name = "iotdb-client"
readme = "README.md"
repository = "https://github.com/rollbor/iotdb-client.git"
version = "0.1.0"

[lib]
name = "iotdb_client"

[dev-dependencies]
chrono = "0.4.19"
prettytable-rs = "0.10.0"
structopt = "0.3.26"

[dependencies]
permutation = "0.4.0"
strum_macros = "0.25.3"
thrift = "0.17.0"
typed-builder = "0.18.0"
byteorder = "1.4"
